Bug 468506 - JS_GetFrameThis needs to call js_ComputeThis in more cases. r=brendan